# useful

./: arm共享  he.c  linux共享  ml
01/: ascii.c  ke  kexue.c  o  shui  shuifenzi.c
02/: add  add1.s  addsub.c  case.c  d  p  paixu.c  set1set0.c  sushu.c  逗号.c
02_zuoye/: 43  44  4_3.c  4_5.c
03/: add  add.c  q  query_day.c  swap  t  test.c
03_zuoye/: 5_3_accumulator.c  f
04_exercise/: a  close_number.c  f  fish_problem.c  l  taijie.c  wedding.c
05/: grade.c  s  v  vote.c
05/tetris/: .data.h.swp
05_exercise/: 6_5  6_5_max.c  6_6_judje.c  6_7_swap.c  j  max_sum.c  ms
06/: float.c  s  size_pointer.c
07/: find_num.c  st  u
07_exercise/: 8_3_插入字符.c
08/: 86  8_6.c  g  main.c
08_exercise/: 8_8回文字符串.c
09/: 96  9_5.c  9_6.c
10_exercise/: 102
11/: h
11/main_h/: a.c  b.c  main  main.c  main.h
11/借书/: m  (+1 more)
12/: swap.c
13/: Makefile
13_exercise/project_动态/: Makefile.am  aclocal.m4  config.h  config.h.in  configure  configure.ac  libtool
13_exercise/project_动态/autom4te.cache/: output.1  requests  traces.0  traces.1
13_exercise/project_动态/lib/: libfuncm.la  libfuncm_la-func2.lo
13_exercise/project_动态/lib/.libs/: libfuncm.la  libfuncm.so.0.0.0
13_exercise/project_动态/src/: Makefile.am  Makefile.in
13_exercise/project_动态/src/.deps/: m-main.Po
13_exercise/project_动态/src/.libs/: m
13_exercise/project_静态/: Makefile  Makefile.am  Makefile.in  configure  configure.ac
13_exercise/project_静态/lib/.deps/: libfunc_a-func1.Po  libfunc_a-func2.Po
13_exercise/project_静态/src/: Makefile  Makefile.am  Makefile.in  main
FILE_IO/: tree
a/: README.md
learngit/: hell.c  learngit.c
test/: .b.c.swp  10.2.c  10.c  4.7.c  5.8.c  a  a.c  arrstr.c  asc.c  b.c  c  c.c  ceshi.c  const  const.c  d  e  e.c  fish_problem_m.c  l  love.c  m  memset.c  s  shuls  shuzum.c  sushu.c  test11.6.c  test5.11.c  联合体.c
test_OK/: 等于.c
就业课/: 8.21就业课
(+317 files in other folders)
